--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -36,11 +36,11 @@
     }
      img {
         z-index: 1;
-            position: absolute;
+/*             position: absolute;
     width: 100%; /* Makes the image fill the width of its parent */
     height: auto; /* Allows the image to maintain its aspect ratio */
     top: 0;
-    left: 0;
+    left: 0; */
     }
     
     
