--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -35,12 +35,8 @@
         border-radius: 10px;
     }
      img {
+        position: relative;
         z-index: 1;
-/*             position: absolute;
-    width: 100%; /* Makes the image fill the width of its parent */
-    height: auto; /* Allows the image to maintain its aspect ratio */
-    top: 0;
-    left: 0; */
     }
     
     
