--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -37,6 +37,10 @@
      img {
         position: relative;
         z-index: 1;
+          width: 100%; /* Makes the image fill the width of its parent */
+    height: 100%; /* Makes the image fill the height of its parent */
+    object-fit: cover; /* Scales the image to be as large as possible while maintaining aspect ratio */
+
     }
     
     
