--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -27,13 +27,13 @@
         
 
     }
-    .draggable img {
+/*     .draggable img {
         width: 10vw;
         height: auto;
         max-width: 100px;
         border: solid 2px black;
         border-radius: 10px;
-    }
+    } */
      img {
         position: relative;
         z-index: 1;
