--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -40,9 +40,8 @@
         z-index: 1;
           width: 100%; /* Makes the image fill the width of its parent */
     height: 100%; /* Makes the image fill the height of its parent */
-    object-fit: cover; /* Scales the image to be as large as possible while maintaining aspect ratio */
-        border: solid 2px black;
-        border-radius: 10px;
+    object-fit: fill/* Scales the image to be as large as possible while maintaining aspect ratio */
+
     }
     
     
