--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -24,6 +24,8 @@
         position: absolute;
 /*         top: 50px;
         left: 50px; */
+                border: solid 2px black;
+        border-radius: 10px;
 
         
 
