--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -22,21 +22,18 @@
     .draggable {
 /*         margin: 50px; /* Adjust margin to control overlap */ */
         position: absolute;
-/*         top: 50px;
-        left: 50px; */
-                border: solid 2px black;
-        border-radius: 10px;
+
 
         
 
     }
-/*     .draggable img {
-        width: 10vw;
-        height: auto;
+    .draggable img {
+/*         width: 10vw;
+        height: auto; */
         max-width: 100px;
         border: solid 2px black;
         border-radius: 10px;
-    } */
+    }
      img {
         position: relative;
         z-index: 1;
