--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -17,6 +17,7 @@
     .player {
 /*         position: absolute; */
         display: flex;
+        left: 0px;
     transform: translateX(20vw); /* Adjust the value as needed */
     }
     .draggable {
