--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -16,6 +16,7 @@
     }
     .player {
 /*         position: absolute; */
+        width: 100vw;
         display: flex;
         left: 0px;
     transform: translateX(30vw); /* Adjust the value as needed */
