--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -32,7 +32,7 @@
     .draggable img {
 /*         width: 10vw;
         height: auto; */
-        max-width: 100px;
+/*         max-width: 100px; */
         border: solid 2px black;
         border-radius: 10px;
     }
