--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -42,7 +42,7 @@
           width: 100%; /* Makes the image fill the width of its parent */
     height: 100%; /* Makes the image fill the height of its parent */
     object-fit: fill/* Scales the image to be as large as possible while maintaining aspect ratio */
-
+    background-color: white;
     }
     
     
