--- a/startgame.html
+++ b/startgame.html
@@ -261,15 +261,20 @@
         return "";
     }
 
-    function createCardElement(imageUrl) {
-        const cardDiv = document.createElement("div");
-        cardDiv.className = "draggable";
-        const img = document.createElement("img");
-        img.src = imageUrl;
-        img.alt = "Card";
-        cardDiv.appendChild(img);
-        return cardDiv;
-    }
+function createCardElement(imageUrl) {
+    const cardDiv = document.createElement("div");
+    cardDiv.className = "draggable";
+
+    const img = document.createElement("img");
+    img.src = imageUrl;
+    img.alt = "Card";
+    img.setAttribute("draggable", "false"); // Make the img not draggable
+    img.className = "draggable";
+    img.style.backgroundColor = 'white'; // Set background color to white
+
+    cardDiv.appendChild(img);
+    return cardDiv;
+}
 
     async function init() {
 	        var inputElement = document.getElementById("gameID");
@@ -304,6 +309,82 @@
  // window.location.href = 'https://johnbernad6server-b837q.ondigitalocean.app/api/join-room?gameroomid=' + gameID;
         // Implement join game functionality here
 init();
+
+	    document.addEventListener('pointerdown', startDrag);
+document.addEventListener('touchstart', startDragTouch);
+
+function startDrag(e) {
+
+    
+    if (!e.target.classList.contains('draggable')) return;
+    
+
+    const draggableCard = e.target;
+    const rect = draggableCard.getBoundingClientRect();
+    const offsetX = e.clientX - draggableCard.getBoundingClientRect().left;
+    const offsetY = e.clientY - draggableCard.getBoundingClientRect().top;
+
+
+    function moveCard(event) {
+            console.log('Start drag called ' + e.clientX + ' ' + rect.left);
+        const newLeft = event.clientX - offsetX;
+        const newTop = event.clientY - offsetY;
+
+        updateCardPosition(draggableCard, newLeft, newTop);
+    }
+
+    function stopDrag() {
+        document.removeEventListener('pointermove', moveCard);
+        document.removeEventListener('pointerup', stopDrag);
+    }
+
+    document.addEventListener('pointermove', moveCard);
+    document.addEventListener('pointerup', stopDrag);
+}
+
+function startDragTouch(e) {
+    e.preventDefault();
+
+    if (!e.target.classList.contains('draggable')) return;
+
+    const draggableCard = e.target;
+    const rect = draggableCard.getBoundingClientRect();
+    const offsetX = e.clientX - draggableCard.getBoundingClientRect().left;
+    const offsetY = e.clientY - draggableCard.getBoundingClientRect().top;
+
+
+function moveCard(event) {
+    const newLeft = event.touches[0].clientX - offsetX;
+    const newTop = event.touches[0].clientY - offsetY;
+
+    // Ensure the card stays within the viewport
+    const maxX = window.innerWidth - draggableCard.offsetWidth;
+    const maxY = window.innerHeight - draggableCard.offsetHeight;
+    const constrainedX = Math.min(Math.max(0, newLeft), maxX);
+    const constrainedY = Math.min(Math.max(0, newTop), maxY);
+
+    updateCardPosition(draggableCard, constrainedX, constrainedY);
+}
+
+
+    function stopDrag() {
+        document.removeEventListener('touchmove', moveCard);
+        document.removeEventListener('touchend', stopDrag);
+    }
+
+    document.addEventListener('touchmove', moveCard);
+    document.addEventListener('touchend', stopDrag);
+}
+
+function updateCardPosition(card, left, top) {
+    const maxX = window.innerWidth - card.offsetWidth;
+    const maxY = window.innerHeight - card.offsetHeight;
+    const constrainedX = Math.min(Math.max(0, left), maxX);
+    const constrainedY = Math.min(Math.max(0, top), maxY);
+
+    card.style.left = constrainedX + 'px';
+    card.style.top = constrainedY + 'px';
+}
     }
 
 
