--- a/startgame.html
+++ b/startgame.html
@@ -51,7 +51,8 @@
 
     body {
         overflow: hidden; /* Disable page scrolling */
-        
+        background-color: #f0f0f0;
+
     }
     .player {
 /*         position: absolute; */
