--- a/htmlcardgameAPIenabled.html
+++ b/htmlcardgameAPIenabled.html
@@ -12,7 +12,8 @@
 
     body {
         overflow: hidden; /* Disable page scrolling */
-        
+                background-color: #f0f0f0;
+
     }
     .player {
 /*         position: absolute; */
