--- a/startgame.html
+++ b/startgame.html
@@ -114,7 +114,7 @@
 	
 
 	 function createGame() {
-        window.location.href = 'https://johnbernad6server-b837q.ondigitalocean.app/play';
+        window.location.href = 'https://johnbernad6server-b837q.ondigitalocean.app/player1';
 
     }
 
