--- a/startgame.html
+++ b/startgame.html
@@ -64,13 +64,13 @@
     .draggable {
 /*         margin: 50px; /* Adjust margin to control overlap */ */
         position: absolute;
-
+	width: 10vw;
 
         
 
     }
     .draggable img {
-/*         width: 15vw;
+/*         width: 10vw;
         height: auto; */
 /*         max-width: 100px; */
         border: solid 2px black;
