--- a/startgame.html
+++ b/startgame.html
@@ -64,7 +64,7 @@
     .draggable {
 /*         margin: 50px; /* Adjust margin to control overlap */ */
         position: absolute;
-	width: 10vw;
+/* 	width: 10vw; */
 
         
 
