--- a/htmlcardgameAPIenabled.html
+++ b/htmlcardgameAPIenabled.html
@@ -211,7 +211,7 @@ function displayRoomID(roomData) {
             const newY = index * offsetY;
             // Triggering the transition by adding the transform property directly to the style attribute
             card.style.transition = `transform 1s ease ${index * 0.1}s`; // Adding delay to stagger the animations
-            card.style.transform = `translate(0px, ${newY}px)`;
+            // card.style.transform = `translate(0px, ${newY}px)`;
         });
     }
 
