--- a/index.html
+++ b/index.html
@@ -55,11 +55,16 @@
 .card:hover .card-description {
   transform: translateY(100%);
 }
+.container{
+    display:flex;
+}
 
 
     </style>
 <body>
     <h1>Hello, World!</h1>
+
+<div class="container">
     <div class="card">
 <div class="card-image"></div>
   <div class="card-description">
@@ -87,6 +92,7 @@
     <p class="text-title"> Card Title</p>
     <p class="text-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
   </div>
+</div>
 </div>
 </body>
 </html>
