--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
     <style>
         .card {
-            margin:20vw;
+            margin:10px;
   height: 254px;
   width: 190px;
   position: relative;
