--- a/index.html
+++ b/index.html
@@ -4,96 +4,128 @@
     <title>Hello World</title>
 </head>
     <style>
-        .card {
-            margin:10px;
-  height: 254px;
-  width: 190px;
-  position: relative;
-  transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
-  border-radius: 16px;
-  box-shadow: 0 0 20px 8px #d0d0d0;
-  overflow: hidden;
+        .scroll-1::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
 }
 
- /*Image*/
-.card-image {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
-  background: #0a3394;
-  background: linear-gradient(to top, #0a3394, #4286f4);
+.scroll-1::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background: #888;
 }
 
-/*Description */
-.card-description {
+.container * {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  color: #fff;
+}
+
+.container {
   display: flex;
-  position: absolute;
-  gap: .5em;
+  overflow-x: scroll;
+  padding: 24px;
+  width: 300px;
+  scroll-snap-type: x mandatory;
+  scroll-padding-top: 24px;
+  border-radius: 8px;
+  gap: 20px;
+}
+
+.container .card {
+  flex: 0 0 100%;
+  overflow: hidden;
+  border-radius: 8px;
+  background-color: #141414;
+  scroll-snap-align: start;
+}
+
+.card .card__image {
+  flex: 1;
+  height: 140px;
+}
+
+.card:nth-child(1) .card__image {
+  background-image: linear-gradient(
+      to right top,
+      #051937, 
+      #004d7a, 
+      #008793, 
+      #00bf72, 
+      #a8eb12
+  );
+}
+
+.card:nth-child(2) .card__image {
+  background-image: linear-gradient(
+    to right top, 
+    #dc09a5, 
+    #ce00b4, 
+    #ba00c5, 
+    #9c00d8, 
+    #6f12eb
+  );
+}
+
+.card:nth-child(3) .card__image {
+  background-image: linear-gradient(
+    to right top, 
+    #dc1009, 
+    #e55f00, 
+    #e49200, 
+    #dac000, 
+    #c7eb12
+  );
+}
+
+.card .card__content {
+  display: flex;
   flex-direction: column;
-  background-color: #f5f5f5;
-  color: #212121;
-  height: 70%;
-  bottom: 0;
-  border-radius: 16px;
-  transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
-  padding: 1rem;
+  gap: 10px;
+  padding: 20px;
 }
 
-/*Text*/
-.text-title {
-  font-size: 1.3rem;
-  font-weight: 700;
+.card .card__content .card__title {
+  font-size: 32px;
+  color: #fff;
+  text-transform: capitalize;
 }
 
-.text-body {
-  font-size: 1rem;
-  line-height: 130%;
+.card .card__content .card__describe {
+  color: #fff;
+  font-size: 16px;
 }
-
-
-/* Hover states */
-.card:hover .card-description {
-  transform: translateY(100%);
-}
-.container{
-    display:flex;
-}
-
-
     </style>
 <body>
     <h1>Hello, World!</h1>
-
-<div class="container">
-    <div class="card">
-<div class="card-image"></div>
-  <div class="card-description">
-    <p class="text-title"> Card Title</p>
-    <p class="text-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+<div class="container scroll-1">
+  <div class="card">
+    <div class="card__image"></div>
+    <div class="card__content">
+        <span class="card__title">Hello</span>
+        <p class="card__describe">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+    </div>
   </div>
-</div>
-    <div class="card">
-<div class="card-image"></div>
-  <div class="card-description">
-    <p class="text-title"> Card Title</p>
-    <p class="text-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+  <div class="card">
+    <div class="card__image"></div>
+    <div class="card__content">
+        <span class="card__title">Hello</span>
+        <p class="card__describe">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+    </div>
   </div>
-</div>
-    <div class="card">
-<div class="card-image"></div>
-  <div class="card-description">
-    <p class="text-title"> Card Title</p>
-    <p class="text-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+  <div class="card">
+    <div class="card__image"></div>
+    <div class="card__content">
+        <span class="card__title">Hello</span>
+        <p class="card__describe">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+    </div>
   </div>
-</div>
-    <div class="card">
-<div class="card-image"></div>
-  <div class="card-description">
-    <p class="text-title"> Card Title</p>
-    <p class="text-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-  </div>
-</div>
 </div>
 </body>
 </html>
