--- a/index.html
+++ b/index.html
@@ -99,33 +99,52 @@
 <body>
     <h1>Hello, World!</h1>
 <div class="container scroll-1">
+  <div class="container">
   <div class="card">
-    <div class="card__image"></div>
-    <div class="card__content">
-        <span class="card__title">Hello</span>
-        <p class="card__describe">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    <div class="face back">
+      <div class="content">
+        <span class="stars"></span>
+        <b class="desc">Hello</b>
+        <p class="desc">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         </p>
+      </div>
+    </div>
+    <div class="face front">
+      <b>Hover</b>
     </div>
   </div>
+</div><div class="container">
   <div class="card">
-    <div class="card__image"></div>
-    <div class="card__content">
-        <span class="card__title">Hello</span>
-        <p class="card__describe">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    <div class="face back">
+      <div class="content">
+        <span class="stars"></span>
+        <b class="desc">Hello</b>
+        <p class="desc">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         </p>
+      </div>
+    </div>
+    <div class="face front">
+      <b>Hover</b>
     </div>
   </div>
+</div><div class="container">
   <div class="card">
-    <div class="card__image"></div>
-    <div class="card__content">
-        <span class="card__title">Hello</span>
-        <p class="card__describe">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    <div class="face back">
+      <div class="content">
+        <span class="stars"></span>
+        <b class="desc">Hello</b>
+        <p class="desc">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         </p>
+      </div>
+    </div>
+    <div class="face front">
+      <b>Hover</b>
     </div>
   </div>
+</div>
 </div>
 </body>
 </html>
