--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ body{
       </div>
     </div>
     <div class="face front">
-      <b>Hover</b>
+      <b>Card game for iOS</b>
     </div>
   </div>
 </div>
@@ -142,7 +142,7 @@ body{
       </div>
     </div>
     <div class="face front">
-      <b>Hover</b>
+      <b>Algo option trader</b>
     </div>
   </div>
 </div>
