--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
   display: flex;
   overflow-x: scroll;
   padding: 24px;
+    height: 100%;
   max-width: 100%;
   scroll-snap-type: x mandatory;
   scroll-padding-top: 24px;
