--- a/index.html
+++ b/index.html
@@ -122,11 +122,15 @@
 }
 
 .icon {
-  text-decoration: none;
-  color: #fff;
-  display: block;
-  position: relative;
+    text-decoration: none;
+    color: #fff;
+    display: block;
+    position: relative;
+    max-width: 50px;
+    margin: 0 auto; /* This centers the element */
 }
+
+
 .layer {
   width: 55px;
   height: 55px;
