--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     color: #fff;
     display: block;
     position: relative;
-    max-width: 50px;
+    max-width: 60px;
     margin: 0 auto; /* This centers the element */
 }
 
@@ -240,14 +240,16 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+  <a href="tel:+17073423998">+17073423998</a>
+                <a href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a>
+                <a href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a>
+                <a href="https://github.com/johnbernad6">github.com/johnbernad6</a>
+		<a href="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/JohnBernadPDF.pdf" download>Download Resume</a>
+           
         </ul>
     </nav>
     <div class="content">
-        <h2>Welcome to Our Website!</h2>
+
        <div class="tooltip-container">
   <div class="tooltip">
     <div class="profile">
@@ -262,7 +264,7 @@
     </div>
   </div>
   <div class="text">
-    <a class="icon" href="https://freecodez.com/">
+    <a class="icon" href="https://www.linkedin.com/in/johnbernad/">
       <div class="layer">
         <span></span>
         <span></span>
