--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
         /* Color Scheme */
 :root {
-    --primary-color: #635985;
-    --secondary-color: #443C68;
-    --tertiary-color: #393053;
-    --background-color: #18122B;
+    --primary-color: #756AB6;
+    --secondary-color: #AC87C5;
+    --tertiary-color: #E0AED0;
+    --background-color: #FFE5E5;
     --text-color: #fff;
 }
+
 
 
         /* Styles for header */
