--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Website</title>
+    <title></title>
     <style>
         /* Reset default browser styles */
         * {
@@ -14,12 +14,13 @@
 
         /* Color Scheme */
 :root {
-    --primary-color: #756AB6;
-    --secondary-color: #AC87C5;
-    --tertiary-color: #E0AED0;
-    --background-color: #FFE5E5;
+    --primary-color: #C4DFDF;
+    --secondary-color: #D2E9E9;
+    --tertiary-color: #E3F4F4;
+    --background-color: #F8F6F4;
     --text-color: #fff;
 }
+
 
 
 
@@ -237,15 +238,15 @@
 </head>
 <body>
     <header>
-        <h1>Responsive Website</h1>
+        <h1></h1>
     </header>
     <nav>
         <ul>
-  <a href="tel:+17073423998">+17073423998</a>
-                <a href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a>
-                <a href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a>
-                <a href="https://github.com/johnbernad6">github.com/johnbernad6</a>
-		<a href="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/JohnBernadPDF.pdf" download>Download Resume</a>
+ 	    <li><a href="tel:+17073423998">+17073423998</a></li>
+                <li><a href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a></li>
+                <li><a href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a></li>
+                <li><a href="https://github.com/johnbernad6">github.com/johnbernad6</a></li>
+		<li><a href="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/JohnBernadPDF.pdf" download>Download Resume</a></li>
            
         </ul>
     </nav>
