--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
             color: var(--text-color);
             text-decoration: none;
         }
+	            footer ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        footer ul li {
+            display: inline;
+            margin-right: 10px;
+        }
+
+        footer ul li a {
+            color: var(--text-color);
+            text-decoration: none;
+        }
 
         /* Styles for main content */
         .content {
