--- a/index.html
+++ b/index.html
@@ -102,29 +102,57 @@
         }
 /* card */
  .card {
- width: 190px;
- height: 254px;
- background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
- border-radius: 20px;
- transition: all .3s;
+  width: 190px;
+  height: 254px;
+  background: #07182E;
+  position: relative;
+  display: flex;
+  place-content: center;
+  place-items: center;
+  overflow: hidden;
+  border-radius: 20px;
 }
 
-.card2 {
- width: 190px;
- height: 254px;
- background-color: #1a1a1a;
- border-radius:;
- transition: all .2s;
+.card h2 {
+  z-index: 1;
+  color: white;
+  font-size: 2em;
 }
 
-.card2:hover {
- transform: scale(0.98);
- border-radius: 20px;
+.card::before {
+  content: '';
+  position: absolute;
+  width: 100px;
+  background-image: linear-gradient(180deg, rgb(0, 183, 255), rgb(255, 48, 255));
+  height: 130%;
+  animation: rotBGimg 3s linear infinite;
+  transition: all 0.2s linear;
 }
 
-.card:hover {
- box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+@keyframes rotBGimg {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
+
+.card::after {
+  content: '';
+  position: absolute;
+  background: #07182E;
+  ;
+  inset: 5px;
+  border-radius: 15px;
+}  
+/* .card:hover:before {
+  background-image: linear-gradient(180deg, rgb(81, 255, 0), purple);
+  animation: rotBGimg 3.5s linear infinite;
+} */
+
+
 
     </style>
 </head>
@@ -137,9 +165,8 @@
     </nav>
     <div class="content">
 
-       div class="card">
-  <div class="card2">
-  </div>
+<div class="card">
+    <h2>CARD</h2>
 </div>
 
     </div>
