--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
         /* Color Scheme */
 :root {
-    --primary-color: #C4DFDF;
-    --secondary-color: #D2E9E9;
-    --tertiary-color: #E3F4F4;
-    --background-color: #F8F6F4;
+    --primary-color: #404258;
+    --secondary-color: #474E68;
+    --tertiary-color: #50577A;
+    --background-color: #6B728E;
     --text-color: #fff;
 }
+
 
 
 
