--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@
     </nav>
     <div class="content">
 
-<div class="card">
+<!-- <div class="card">
     <h2>CARD</h2>
 </div>
-
+ -->
 <div class="e-card playing">
   <div class="image"></div>
   
