--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   background: transparent;
   box-shadow: 0px 8px 28px -9px rgba(0,0,0,0.45);
   position: relative;
-  width: 90%;
+  width: 100%;
   height: 330px;
   border-radius: 16px;
   overflow: hidden;
@@ -167,13 +167,13 @@
 
 .wave {
   position: absolute;
-  width: 540px;
-  height: 700px;
+  width: 200% ;
+  height: 600%;
   opacity: 0.6;
   left: 0;
-  top: 0;
+  bottom: 50%; /* Adjusted to stick out halfway from the bottom */
   margin-left: -50%;
-  margin-top: -70%;
+  margin-bottom: 100%; /* Adjusted to center the wave */
   background: linear-gradient(744deg,#af40ff,#5b42f3 60%,#00ddeb);
 }
 
