--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
 
 .wave {
   position: absolute;
-  width: 200% ;
-  height: 600%;
+  width: 180vw ;
+  height: 200vw;
   opacity: 0.6;
   left: 0;
-  bottom: 50%; /* Adjusted to stick out halfway from the bottom */
+  bottom: -50%; /* Adjusted to stick out halfway from the bottom */
   margin-left: -50%;
-  margin-bottom: 100%; /* Adjusted to center the wave */
+  margin-bottom: 200%; /* Adjusted to center the wave */
   background: linear-gradient(744deg,#af40ff,#5b42f3 60%,#00ddeb);
 }
 
