--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
   margin-left: -50%;
   margin-bottom: 200%; /* Adjusted to center the wave */
   background: linear-gradient(744deg,#af40ff,#5b42f3 60%,#00ddeb);
+  z-index:-1;
 }
 
 .icon {
