--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 
         /* Color Scheme */
 :root {
-    --primary-color: #18122B ;
-    --secondary-color: #443C68;
-    --tertiary-color: #393053;
-    --background-color: #635985;
+    --primary-color: #404258;
+    --secondary-color: #474E68;
+    --tertiary-color: #50577A;
+    --background-color: #6B728E;
     --text-color: #fff;
 }
-
 
 
 
@@ -156,19 +155,17 @@
 
 /* wave card */
 .e-card {
-  margin: 0 auto;
-  /*background: transparent;*/
-
+  margin: 100px auto;
+  background: transparent;
   box-shadow: 0px 8px 28px -9px rgba(0,0,0,0.45);
   position: relative;
   width: 100%;
-  height: 80vh;
+  height: 330px;
   border-radius: 16px;
   overflow: hidden;
 }
 
 .wave {
-  
   position: absolute;
   width: 180vw ;
   height: 200vw;
@@ -178,7 +175,6 @@
   margin-left: -50%;
   margin-bottom: 200%; /* Adjusted to center the wave */
   background: linear-gradient(744deg,#af40ff,#5b42f3 60%,#00ddeb);
-  z-index:1;
 }
 
 .icon {
@@ -247,10 +243,6 @@
   }
 }
 
-/* space button*/
-
-
-
     </style>
 </head>
 <body>
@@ -268,27 +260,18 @@
  -->
 <div class="e-card playing">
   <div class="image"></div>
-
-
   
   <div class="wave"></div>
   <div class="wave"></div>
-
-
-
-
+  <div class="wave"></div>
   
 
       <div class="infotop">
 
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="icon">
-  </svg><br>    
-
-  
-  
+  </svg><br>      
+  My Projects
 <br>
-
-
 
   </div>
 </div>
