--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@ strong {
   <div class="wave"></div>
 
 
+<div>
 <button class="btn" type="button">
   <strong>CONTINUE</strong>
   <div id="container-stars">
@@ -455,7 +456,7 @@ strong {
     <div class="circle"></div>
   </div>
 </button>
-
+</div>
   
 
       <div class="infotop">
