--- a/index.html
+++ b/index.html
@@ -446,7 +446,19 @@ strong {
 
 <div>
 <button class="btn" type="button">
-  <strong>CONTINUE</strong>
+  <strong>WELCOME TO MY SERVER</strong>
+	<p>Hey there! 👋
+I’m glad you made it.
+
+This server is where I host and manage the APIs I’ve built for my games and SaaS systems. Some of these tools are available to explore, while others are private or limited to certain projects — but everything here is built with performance, scalability, and dev experience in mind.
+
+Here’s a quick overview:
+
+🎮 Game APIs – Real-time data, matchmaking, player stats, and leaderboard integration.
+
+☁️ SaaS APIs – Authentication, billing, analytics, and backend services.
+
+🔒 Some endpoints and systems are private or invite-only — feel free to reach out if you’re interested in access with the links provided below.</p>
   <div id="container-stars">
     <div id="stars"></div>
   </div>
