--- a/index.html
+++ b/index.html
@@ -447,7 +447,17 @@ strong {
 <div>
 <button class="btn" type="button">
   <strong>WELCOME TO MY SERVER</strong>
-	<p>Hey there! 👋
+	
+  <div id="container-stars">
+    <div id="stars"></div>
+  </div>
+
+  <div id="glow">
+    <div class="circle"></div>
+    <div class="circle"></div>
+  </div>
+</button>
+	<p style="color: white;">Hey there! 👋
 I’m glad you made it.
 
 This server is where I host and manage the APIs I’ve built for my games and SaaS systems. Some of these tools are available to explore, while others are private or limited to certain projects — but everything here is built with performance, scalability, and dev experience in mind.
@@ -459,15 +469,6 @@ Here’s a quick overview:
 ☁️ SaaS APIs – Authentication, billing, analytics, and backend services.
 
 🔒 Some endpoints and systems are private or invite-only — feel free to reach out if you’re interested in access with the links provided below.</p>
-  <div id="container-stars">
-    <div id="stars"></div>
-  </div>
-
-  <div id="glow">
-    <div class="circle"></div>
-    <div class="circle"></div>
-  </div>
-</button>
 </div>
   
 
