--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ strong {
     <div class="circle"></div>
   </div>
 </button>
-	<p style="color: white;">Hey there! 👋
+	<p style="margin: 20%; color: white; position: relative; z-index: 9999;">Hey there! 👋
 I’m glad you made it.
 
 This server is where I host and manage the APIs I’ve built for my games and SaaS systems. Some of these tools are available to explore, while others are private or limited to certain projects — but everything here is built with performance, scalability, and dev experience in mind.
