--- a/index.html
+++ b/index.html
@@ -502,7 +502,9 @@ Here’s a quick overview:
                 <li><a href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a></li>
                 <li><a href="https://github.com/johnbernad6">github.com/johnbernad6</a></li>
 		<li><a href="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/JohnBernadPDF.pdf" download>Download Resume</a></li>
-           
+           	<li><a href="https://apps.apple.com/us/app/pinoy-poker/id6461049438" download>Try my free game on the app store</a></li>
+
+		 
         </ul>
     </footer>
 </body>
