--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ strong {
 
 <div>
 <button class="btn" type="button">
-  <strong>WELCOME TO MY SERVER</strong>
+  <strong>WELCOME</strong>
 	
   <div id="container-stars">
     <div id="stars"></div>
@@ -487,14 +487,14 @@ Here’s a quick overview:
 </div>
 
     </div>
-    <section>
+<!--     <section>
         <h2>Section 1</h2>
         <p>This is the first section of the website.</p>
     </section>
     <section>
         <h2>Section 2</h2>
         <p>This is the second section of the website.</p>
-    </section>
+    </section> -->
     <footer>
          <ul>
  	    <li><a href="tel:+17073423998">+17073423998</a></li>
