--- a/index.html
+++ b/index.html
@@ -468,7 +468,16 @@ Here’s a quick overview:
 
 ☁️ SaaS APIs – Authentication, billing, analytics, and backend services.
 
-🔒 Some endpoints and systems are private or invite-only — feel free to reach out if you’re interested in access with the links provided below.</p>
+🔒 Some endpoints and systems are private or invite-only — feel free to reach out if you’re interested in access with the links provided below.
+	
+	
+	
+	
+	
+	
+	
+	
+	</p>
 </div>
   
 
