--- a/touch.html
+++ b/touch.html
@@ -73,16 +73,19 @@
   }
 </script>
   
+
 <script>
-    fetch('/Selectall')
+    fetch('/Sellectall')
       .then(response => response.json())
-      console.log('Grocery List Items:', data);
+      .then(data => {
+        console.log('Grocery List Items:', data);
         // You can also display the data on the page if needed
       })
       .catch(error => {
         console.error('Error fetching grocery list items:', error);
       });
   </script>
+
 
 </body>
 </html>
