--- a/touch.html
+++ b/touch.html
@@ -75,7 +75,7 @@
   
 
 <script>
-    fetch('/Sellectall')
+    fetch('/api/grocery-list')
       .then(response => response.json())
       .then(data => {
         console.log('Grocery List Items:', data);
