--- a/ReactMenu/src/index.html
+++ b/ReactMenu/src/index.html
@@ -11,7 +11,7 @@
   <div id="root"></div>
 
   <!-- Load App.js (JSX allowed via Babel) -->
-  <script type="text/babel" src="App.js"></script>
+  <script type="text/babel" src="src/App.js"></script>
 
   <!-- Render App -->
   <script type="text/babel">
