--- a/ReactMenu/src/index.html
+++ b/ReactMenu/src/index.html
@@ -5,7 +5,9 @@
   <title>React App</title>
   <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+
 </head>
 <body>
   <div id="root"></div>
