--- a/index.html
+++ b/index.html
@@ -460,15 +460,17 @@ strong {
 	<p style="margin: 20px; color: white; position: relative; ">Hey there! 👋
 I’m glad you made it.
 
-This server is where I host and manage the APIs I’ve built for my games and SaaS systems. Some of these tools are available to explore, while others are private or limited to certain projects — but everything here is built with performance, scalability, and dev experience in mind.
-
-Here’s a quick overview:
-
-🎮 Game APIs – Real-time data, matchmaking, player stats, and leaderboard integration.
-
-☁️ SaaS APIs – Authentication, billing, analytics, and backend services.
-
-🔒 Some endpoints and systems are private or invite-only — feel free to reach out if you’re interested.
+This server is where I host and manage the APIs I’ve built for my games and SaaS systems. Check out my contact info and projects below.
+         <ul>
+ 	    <li><a href="tel:+17073423998">+17073423998</a></li>
+                <li><a href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a></li>
+                <li><a href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a></li>
+                <li><a href="https://github.com/johnbernad6">github.com/johnbernad6</a></li>
+		<li><a href="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/JohnBernadPDF.pdf" download>Download Resume</a></li>
+           	<li><a href="https://apps.apple.com/us/app/pinoy-poker/id6461049438" download>Try my free game on the app store</a></li>
+		<li><a href="https://johnbernad6server-b837q.ondigitalocean.app/Menu"> Check out this system i'm currently working on.</a></li>
+		 
+        </ul>
 	
 	
 	
@@ -505,16 +507,7 @@ Here’s a quick overview:
         <p>This is the second section of the website.</p>
     </section> -->
     <footer>
-         <ul>
- 	    <li><a href="tel:+17073423998">+17073423998</a></li>
-                <li><a href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a></li>
-                <li><a href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a></li>
-                <li><a href="https://github.com/johnbernad6">github.com/johnbernad6</a></li>
-		<li><a href="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/JohnBernadPDF.pdf" download>Download Resume</a></li>
-           	<li><a href="https://apps.apple.com/us/app/pinoy-poker/id6461049438" download>Try my free game on the app store</a></li>
 
-		 
-        </ul>
     </footer>
 </body>
 </html>
