--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ I’m glad you made it.
 
 This server is where I host and manage the APIs I’ve built for my games and SaaS systems. Check out my contact info and projects below.
 </p>
-	  <ul>
+	  <ul style="position: relative; >
  	    	<li><a style="color: black; font-weight: bold; text-decoration: none; href="tel:+17073423998">+17073423998</a></li>
                 <li><a style="color: black; font-weight: bold; text-decoration: none; href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a></li>
                 <li><a style="color: black; font-weight: bold; text-decoration: none; href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a></li>
