--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     --primary-color: #18122B ;
     --secondary-color: #443C68;
     --tertiary-color: #393053;
-    --background-color: #635985;
+    --background-color: #ffffff;
     --text-color: #fff;
 }
 
