--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     --primary-color: #18122B ;
     --secondary-color: #443C68;
     --tertiary-color: #393053;
-    --background-color: #ffffff;
+    --background-color: #000000;
     --text-color: #fff;
 }
 
@@ -157,8 +157,8 @@
 /* wave card */
 .e-card {
   margin: 0 auto;
-  /*background: transparent;*/
-
+  background: #07182E;
+  
   box-shadow: 0px 8px 28px -9px rgba(0,0,0,0.45);
   position: relative;
   width: 100%;
@@ -172,7 +172,7 @@
   position: absolute;
   width: 180vw ;
   height: 200vw;
-  opacity: 0.6;
+  opacity: 0.1;
   left: 0;
   bottom: -50%; /* Adjusted to stick out halfway from the bottom */
   margin-left: -50%;
