--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     --secondary-color: #443C68;
     --tertiary-color: #393053;
     --background-color: #000000;
-    --text-color: #fff;
+    --text-color: #000000;
 }
 
 
@@ -157,7 +157,7 @@
 /* wave card */
 .e-card {
   margin: 0 auto;
-  background: #07182E;
+  background: #ffffff;
   
   box-shadow: 0px 8px 28px -9px rgba(0,0,0,0.45);
   position: relative;
@@ -464,7 +464,7 @@ I’m glad you made it.
 
 This server is where I host and manage the APIs I’ve built for my games and SaaS systems. Check out my contact info and projects below.
 </p>
-	  <ul style="margin: 5px;position: relative; color: white; font-weight: bold; >
+	  <ul style="margin: 5px;position: relative; color: black; font-weight: bold; >
  	    	<li><a href="tel:+17073423998">+17073423998</a></li>
                 <li><a href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a></li>
                 <li><a href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a></li>
