--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
         /* Color Scheme */
 :root {
-    --primary-color: #18122B ;
-    --secondary-color: #443C68;
+    --primary-color: #d1d1d1 ;
+    --secondary-color: #a5a5a5;
     --tertiary-color: #393053;
     --background-color: #ffffff;
     --text-color: #ffffff;
@@ -172,7 +172,7 @@
   position: absolute;
   width: 180vw ;
   height: 200vw;
-  opacity: 0.1;
+  opacity: 0.3;
   left: 0;
   bottom: -50%; /* Adjusted to stick out halfway from the bottom */
   margin-left: -50%;
