--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ strong {
 <div class="e-card playing">
 
   <header>
-        <h1></h1>
+        <h1>JOHN BERNAD</h1>
     </header>
     <nav>
        
