--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             background-color: var(--primary-color);
             color: var(--text-color);
             padding: 10px;
-            text-align: center;
+            text-align: left;
+
         }
 
         /* Styles for navigation menu */
