--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 /* wave card */
 .e-card {
   margin: 0 auto;
-  background: #333333;
+  background: #ffffff;
   
   box-shadow: 0px 8px 28px -9px rgba(0,0,0,0.45);
   position: relative;
@@ -173,7 +173,7 @@
   position: absolute;
   width: 180vw ;
   height: 200vw;
-  opacity: 0.3;
+  opacity: 0.6;
   left: 0;
   bottom: -50%; /* Adjusted to stick out halfway from the bottom */
   margin-left: -50%;
