--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
         /* Color Scheme */
 :root {
-    --primary-color: #d1d1d1 ;
-    --secondary-color: #a5a5a5;
-    --tertiary-color: #393053;
+    --primary-color: #494949 ;
+    --secondary-color: #b9b9b9;
+    --tertiary-color: #f0f0f0;
     --background-color: #ffffff;
     --text-color: #ffffff;
 }
