--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     --primary-color: #494949 ;
     --secondary-color: #b9b9b9;
     --tertiary-color: #f0f0f0;
-    --background-color: #ffffff;
+    --background-color: #313131;
     --text-color: #ffffff;
 }
 
