--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     --primary-color: #494949 ;
     --secondary-color: #b9b9b9;
     --tertiary-color: #f0f0f0;
-    --background-color: #313131;
+    --background-color: #ffffff;
     --text-color: #ffffff;
 }
 
@@ -158,13 +158,13 @@
 /* wave card */
 .e-card {
   margin: 0 auto;
-  background: #ffffff;
+  background: transparent;
   
   box-shadow: 0px 8px 28px -9px rgba(0,0,0,0.45);
   position: relative;
   width: 100%;
   height: 80vh;
-  border-radius: 16px;
+  border-radius: 5px;
   overflow: hidden;
 }
 
