--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ strong {
 
 
 <div>
-<button class="btn" type="button">
+<div class="btn" type="button">
   <strong>WELCOME</strong>
 	
   <div id="container-stars">
@@ -459,7 +459,7 @@ strong {
     <div class="circle"></div>
     <div class="circle"></div>
   </div>
-</button>
+</div>
 	<p style="margin: 20px; color: white; position: relative; ">Hey there! 👋
 I’m glad you made it.
 
