--- a/index.html
+++ b/index.html
@@ -442,9 +442,9 @@ strong {
   <div class="image"></div>
 
 
-  
+<!--   
   <div class="wave"></div>
-  <div class="wave"></div>
+  <div class="wave"></div> -->
 
 
 <div>
