--- a/index.html
+++ b/index.html
@@ -433,12 +433,13 @@ strong {
  -->
 <div class="e-card playing">
 
-  <header>
-        <h1>JOHN BERNAD</h1>
+  <!-- <header>
+        
     </header>
     <nav>
        
-    </nav>
+    </nav> -->
+    <h1>JOHN BERNAD</h1>
   <div class="image"></div>
 
 
