--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 /* wave card */
 .e-card {
   margin: 0 auto;
-  background: transparent;
+  background: darkslategray;
   
   box-shadow: 0px 8px 28px -9px rgba(0,0,0,0.45);
   position: relative;
