--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 /* wave card */
 .e-card {
   margin: 0 auto;
-  background: darkslategray;
+  background: ;
   
   box-shadow: 0px 8px 28px -9px rgba(0,0,0,0.45);
   position: relative;
@@ -263,7 +263,7 @@
   border-radius: 5rem;
   transition: 0.5s;
   animation: gradient_301 5s ease infinite;
-  border: double 4px transparent;
+  /* border: double 4px transparent; */
   background-image: linear-gradient(#212121, #212121),  linear-gradient(137.48deg, #ffdb3b 10%,#FE53BB 45%, #8F51EA 67%, #0044ff 87%);
   background-origin: border-box;
   background-clip: content-box, border-box;
@@ -439,8 +439,11 @@ strong {
     <nav>
        
     </nav> -->
-    <h2>JOHN BERNAD</h2>
-  <div class="image"></div>
+
+  <div class="image">
+
+    
+  </div>
 
 
 <!--   
@@ -450,7 +453,7 @@ strong {
 
 <div>
 <div class="btn" type="button">
-  <strong>WELCOME</strong>
+  <strong>JOHN BERNAD</strong>
 	
   <div id="container-stars">
     <div id="stars"></div>
