--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ I’m glad you made it.
 This server is where I host and manage the APIs I’ve built for my games and SaaS systems. Check out my contact info and projects below.
 </p>
 
-<ul style="margin: 5px; position: relative; color: black; font-weight: bold; text-decoration: none;">
+<ul style="margin: 5px; position: relative; font-weight: bold; text-decoration: none;">
     <li style="color: white; text-decoration: none;"><a href="tel:+17073423998">+17073423998</a></li>
     <li style="color: white; text-decoration: none;"><a href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a></li>
     <li style="color: white; text-decoration: none;"><a href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a></li>
